# TsyganenkoModels.jl

./: .gitignore  DEVELOPMENT.md  LICENSE  Project.toml  README.md  justfile
.github/workflows/: CI.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md
lib/Geopack.jl/: CondaPkg.toml  Project.toml  README.md
lib/Geopack.jl/src/: Geopack.jl
lib/tsyganenko/: T89d_dp.for  T96.for  TS04c.for
previews/PR11/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR13/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR17/: .documenter-siteinfo.json  index.html
previews/PR3/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR4/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR5/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR6/: .documenter-siteinfo.json  index.html  objects.inv
previews/PR7/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
python/: .gitignore  README.md  juliapkg.json  pyproject.toml
python/src/tsyganenkomodels/: __init__.py
python/tests/: test_models.py  test_wrapper.py
python/tsyganenko/: __init__.py
src/: Birkeland_current.jl  TsyganenkoModels.jl  composition.jl  dipole.jl  helpers.jl  models.jl  ring_current.jl  t01.jl  t01_birk.jl  t01_consts.jl  t01_funcs.jl  t01_rc.jl  t01_tail.jl  t89.jl  t96.jl  t96_consts.jl  t96_helpers.jl  tail.jl  ts04.jl  ts04_consts.jl  ts04_funcs.jl
test/: Project.toml  runtests.jl  test_geopack.jl
