[project]
name = "tsyganenkomodels-jl"
version = "0.1.0"
description = "Python wrapper for TsyganenkoModels.jl - access Tsyganenko magnetic field models via Julia"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["tsyganenko", "julia", "space-physics", "geomagnetism"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["juliacall>=0.9.20"]

[project.urls]
Homepage = "https://github.com/JuliaSpacePhysics/TsyganenkoModels.jl"
Repository = "https://github.com/JuliaSpacePhysics/TsyganenkoModels.jl"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/tsyganenkomodels"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
pdm = "*"

[tool.pixi.pypi-dependencies]
tsyganenkomodels-jl = { path = ".", editable = true }
pytest = "*"
twine = "*"

[tool.pixi.tasks]
test = "pytest"
